{
    "name": "InputMaster",
    "maps": [
        {
            "name": "GeneralGameplay",
            "id": "bcd2bdbf-c31b-4e8e-a4b6-4bd161d4e9bf",
            "actions": [
                {
                    "name": "WalkVertical",
                    "type": "Value",
                    "id": "7097cd41-2404-478e-af99-b0607a77d741",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WalkHorizontal",
                    "type": "Value",
                    "id": "42228ff6-e2d1-4e76-8726-d3e74f0aab35",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "cb8d396a-3076-469a-8283-caf4659f231c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "VerticalKeyboard",
                    "id": "10de6561-2920-4b45-8ec7-745149544d66",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "5a716be8-4757-440f-a8f2-97838f77364e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "WalkVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "91ca059b-0fe4-4ad8-bc32-817f364c040e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "WalkVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "VerticalDpad",
                    "id": "f5dc36fc-dcc6-4d33-9d23-18111c3f2ab8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "143a56f0-0daa-46eb-9246-426abb9a5b32",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "4ff34def-1243-4ea5-aaae-7f2d180560a4",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "VerticalLStick",
                    "id": "55914651-7e0e-42e7-acb4-cd9b7552afd4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "c246b39f-06d9-4760-a012-dba483eb2feb",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "d4048d43-05d3-4782-b384-dac18f28a005",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "HorizontalKeyboard",
                    "id": "aa175f3a-381c-4a2b-9599-0ef86df53e5b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "12c018c0-2aed-47f8-b2d6-743ce50904a9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "WalkHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "a8a4e59d-2e6f-4786-b2fc-596c5eaf2ed1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "WalkHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "HorizontalDpad",
                    "id": "86c503c0-f40c-4f44-b179-078e1e565d55",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "af842939-9bcc-48d3-aca3-be9e9dd44411",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0da74d23-2427-4fac-a26f-ab37f9d33cde",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "HorizontalLStick",
                    "id": "0f3268f8-ea4e-4401-97ae-bb8b0cd81036",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d2efc04c-7587-437b-9b75-5383b01e5b59",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e44ea937-57b3-4881-abba-b81a00e23d76",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WalkHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bcc73e2b-67e3-420a-9be8-099127f8d8fa",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "daf933a3-923f-497b-9513-880ea44b1f8b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "54fdbd2c-ef2a-45cc-a398-0150da934497",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "8ceb4140-5434-44a4-94b9-c930bf384691",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "179847f3-f191-4581-bd12-2ad08321f9c2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TitleScreen",
            "id": "e02ca2a0-a630-4ae9-90b9-4e800d5ce020",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "366d64e1-64bd-4b47-9cc4-ee7f3fb00628",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "721bc9fc-fb18-478e-9c30-4de2e2c78e7d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}